Delete greeting-library